--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -16,6 +16,8 @@ main {
   height: 100vh;
   width: 200px;
   transition: all 0.5s;
+  justify-content: center;
+  align-items: center;
 }
 .top_section {
   display: flex;
@@ -29,12 +31,14 @@ main {
   margin-left: 50px;
 }
 .link {
-  display: flex;
   color: #fff;
   padding: 15px;
   gap: 15px;
   transition: all 0.5s;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .logo {
   color: #fff;
